[package]
name = "clockwork"
version = "0.1.0"
authors = ["tuzymandias <nicholasmulianto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
logging = [ "tracing" ]

[dependencies]
tokio = { version = "1.0.1", features=["full"] }
toml = { version = "0.5.7" }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.2.15", features = ["fmt"] }
async-trait = { version = "0.1.42" }
tracing = { version = "0.1.21", optional = true }

[lib]
name = "clockwork"
path = "src/lib.rs"

[[example]]
name = "basic_app"
path = "examples/basic_app.rs"

